# violence

./: .gitignore  AST.cpp  AST.h  CMakeLists.txt  InlineCHandler.cpp  InlineCHandler.h  Interpreter.cpp  Interpreter.h  LICENSE  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Reader.cpp  Reader.h  Token.cpp  Token.h  build-all.sh  build.sh  install.sh  main.cpp  run.sh  time_test.sh  utils.h
.github/workflows/: build_and_publish.yml  docs.yml  jekyll-gh-pages.yml
configs/linux/: CMakeLists.txt  CmakeLists.txt
configs/win_64/: CMakeLists.txt  CmakeLists.txt
docs/: LEXER.md  README.md  basics.md  building.md  example.md  examples.md  functions.md  interpreter.md  lexer.md  parser.md  variables.md
example/: calc.vio  fizzbuzz.vio  helloworld.vio  import.vio  listests.vio  simple.vio  test.vio
std/: buildints.vio  math.vio  std.vio
